Modify Module Yaml File Title for Content Browse Test

--- a/learn-test-sandbox/cotentbrowsetest/modules/fallback/index.yml
+++ b/learn-test-sandbox/cotentbrowsetest/modules/fallback/index.yml
@@ -4,7 +4,7 @@ metadata:
   title: 中文测试 - browsetestloc-updatemodule
   description: 中文描述 - browsetestloc-updatemodule-Learn how to customize an app by adding controls, images, and logic.
   ms.date: 05/24/2019
-title: 标题 Customize an app -browsetestloc
+title: 新标题 Customize an app -browsetestloc20230501040706
 summary: browsetestloc-updatemodule - Learn how to customize an app by adding controls, images, and logic.
 abstract: |
   In this module, you will:
