--- a/learn-test-sandbox/cotentbrowsetest/modules/FromFolder/index.yml
+++ b/learn-test-sandbox/cotentbrowsetest/modules/FromFolder/index.yml
@@ -1,5 +1,5 @@
 ### YamlMime:Module 
-uid: learn-test-sandbox.MoveFolder-module.browsetestloc
+uid: learn-test-sandbox.MoveFolder-module.browsetestloc.2
 metadata: 
   title: BrowseTest - Customize an app
   description: BrowseTest - Learn how to customize an app by adding controls, images, and logic.
@@ -24,5 +24,7 @@ roles:
 - functional-consultant
 products:  
 - m365
+units: 
+- learn-test-sandbox.moveFolderZhCn.handback-already.browsetest.2
 badge: 
   uid: learn-test-sandbox.movemoduleZhCn.badge
