--- a/learn-test-sandbox/cotentbrowsetest/modules/TestFolder/ModuleUnitTestFile2.yml
+++ b/learn-test-sandbox/cotentbrowsetest/modules/TestFolder/ModuleUnitTestFile2.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-test-sandbox.moveFolderZhCn.handback-already.browsetest2
+uid: learn-test-sandbox.moveFolderZhCn.handback-already.browsetest.2
 title: 这个单元被move module 测试的module文件引用了(From Folder)。
 metadata: 
   title: 这个是测试用的moduleUnit.
