Modify Loc Learning Path Yaml File Title for Content Browse Test

--- a/learn-test-sandbox/cotentbrowsetest/paths/UpdateLPTest/index.yml
+++ b/learn-test-sandbox/cotentbrowsetest/paths/UpdateLPTest/index.yml
@@ -1,6 +1,6 @@
 ### YamlMime:LearningPath
 uid: learn-test-sandbox.updateLPTestLoc.2
-title: LP 在中文环境在的测试 - 在powerapps里面创建一个应用
+title: LP 在中文环境在的测试 - 在powerapps里面创建一个应用 - 新标题20230925044910
 summary: 我是summary。
 iconUrl: http://via.placeholder.com/120x120
 levels:
