--- a/learn-test-sandbox/cotentbrowsetest/paths/UpdateLPTest/index.yml
+++ b/learn-test-sandbox/cotentbrowsetest/paths/UpdateLPTest/index.yml
@@ -1,6 +1,6 @@
 ### YamlMime:LearningPath
 uid: learn-test-sandbox.updateLPTestLoc.2
-title: LP 在中文环境在的测试 - 在powerapps里面创建一个应用 - 新标题20231122040937 - 新标题20231119041347 - 新标题20231025045144
+title: LP 在中文环境在的测试 - 在powerapps里面创建一个应用 - 新标题20231211041037 - 新标题20231122040937 - 新标题20231119041347 - 新标题20231025045144
 summary: 我是summary。
 iconUrl: http://via.placeholder.com/120x120
 levels:
